infrastructure/captain-kube/cloudnative-pg-cluster/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cnpg-cluster
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.31
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.31
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.31
