infrastructure/captain-kube/cloudnative-pg-cluster/networkPolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-from-prometheus
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: postgres-cluster
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-prometheus
            io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "9187"
---
# ingress from cloudnative-pg-operator
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-from-cloudnative-pg-operator
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: postgres-cluster
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.serviceaccount: cloudnative-pg
            io.kubernetes.pod.namespace: cnpg-system
      toPorts:
        - ports:
            - port: "8000"
            - port: "5432"
---
# allow ingress from cluster
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-from-cluster
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: postgres-cluster
  ingress:
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "5432"
---
## allow egress to kube-apiserver
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-to-apiserver-from-postgres-cluster-initdb
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: postgres-cluster
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
---
# allow egress to minio
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-to-minio
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: postgres-cluster
  egress:
    - toEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.serviceaccount: minio
            io.kubernetes.pod.namespace: minio
      toPorts:
        - ports:
            - port: "9000"
